--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/dice1.png
-     - images/dice2.jpeg
+     - images/
+#     - images/dice2.png
+#     - images/dice3.jpeg
+#     - images/dice4.jpg
+#     - images/dice5.jpeg
+#     - images/dice6.jpeg
+
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
