--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,12 +60,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/
-#     - images/dice2.png
-#     - images/dice3.jpeg
-#     - images/dice4.jpg
-#     - images/dice5.jpeg
-#     - images/dice6.jpeg
+     - images/dice1.jpeg
+     - images/dice2.jpeg
+     - images/dice3.jpeg
+     - images/dice4.jpeg
+     - images/dice5.jpeg
+     - images/dice6.jpeg
 
 
 
