--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,11 +61,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/dice1.jpeg
-     - images/dice2.jpeg
-     - images/dice3.jpeg
-     - images/dice4.jpeg
-     - images/dice5.jpeg
-     - images/dice6.jpeg
+#     - images/dice2.jpeg
+#     - images/dice3.jpeg
+#     - images/dice4.jpeg
+#     - images/dice5.jpeg
+#     - images/dice6.jpeg
 
 
 
